# translator

./: .gitignore  .gitmodules  ;  CMakeLists.txt  CodeGenerator.cpp  README.md  grammar.txt  input.txt  vcpkg.json
CMake/: HunterPackages.cmake  LLVM.cmake
include/: AST.hpp  CodeGenerator.hpp  JIT.hpp  Lexer.hpp  Logger.hpp  Parser.hpp  STD.hpp  Token.hpp
src/: AST.cpp  CodeGenerator.cpp  JIT.cpp  Lexer.cpp  Logger.cpp  Parser.cpp  ParserOLD.cpp  STD.cpp  Token.cpp  main.cpp
tests/: CMakeLists.txt  test_input.txt  test_lexer.cpp  test_parser.cpp
